--- a/src/components/rightSidebar/Graphs.css
+++ b/src/components/rightSidebar/Graphs.css
@@ -1,3 +1,7 @@
 #country__graphs {
+  /* margin-left: 20px; */
+}
+
+#line__graphs svg {
   margin-left: 20px;
 }
